--- a/NodeTodoApi/package.json
+++ b/NodeTodoApi/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.16.2",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.1"
+  },
+  "devDependencies": {
+    "expect": "^22.3.0",
+    "mocha": "^5.0.1",
+    "nodemon": "^1.15.1",
+    "supertest": "^3.0.0"
   }
 }
