--- a/NodeTodoApi/package.json
+++ b/NodeTodoApi/package.json
@@ -15,10 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.1",
-    "mongoose": "^5.0.1"
+    "mongoose": "^5.0.1",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^22.3.0",
